<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Acgchn</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="heart">heart</string>
    <string name="user">user</string>
    <string name="edit">edit</string>
    <string name="email">email</string>
    <string name="star">star</string>
    <string name="address">address</string>
    <string name="sure">Sure</string>
    <string name="cancle">Cancle</string>
    <string name="exit">Did you want to exit the app?</string>
    <string name="warning">Warning</string>
    <string name="strDesc">image</string>
    <string name="strNews">资讯</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="frame_title_new_news">最新资讯</string>
    <string name="frame_title_new_blog">最新博客</string>
    <string name="frame_title_new_recommend">推荐阅读</string>
    <string name="frame_title_question_ask">最新提问</string>
    <string name="frame_title_question_share">最新分享</string>
    <string name="frame_title_quesion_job">最新求职</string>
    <string name="frame_title_tweet_new">最新动弹</string>
    <string name="frame_title_tweet_hot">热门动弹</string>
    <string name="frame_title_tweet_mine">我的动弹</string>
    <string name="frame_title_active_new">最新动态</string>
    <string name="frame_title_active_atme">我</string>
    <string name="frame_title_active_comment">评论</string>
    <string name="frame_title_active_myself">我自己</string>
    <string name="frame_title_active_message">留言</string>

</resources>