<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35.0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/frame_btn_active_new"
            style="@style/frame_button"
            android:text="@string/frame_title_active_new" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/frame_button_cutline"
            android:contentDescription="@string/strDesc" />

        <Button
            android:id="@+id/frame_btn_active_atme"
            style="@style/frame_button"
            android:text="@string/frame_title_active_atme" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/frame_button_cutline"
            android:contentDescription="@string/strDesc" />

        <Button
            android:id="@+id/frame_btn_active_comment"
            style="@style/frame_button"
            android:contentDescription="@string/strDesc"
            android:text="@string/frame_title_active_comment" />
                <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/frame_button_cutline"
            android:contentDescription="@string/strDesc" />

        <Button
            android:id="@+id/frame_btn_active_myself"
            style="@style/frame_button"
            android:contentDescription="@string/strDesc"
            android:text="@string/frame_title_active_myself" />
                <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/frame_button_cutline"
            android:contentDescription="@string/strDesc" />

        <Button
            android:id="@+id/frame_btn_active_message"
            style="@style/frame_button"
            android:contentDescription="@string/strDesc"
            android:text="@string/frame_title_active_message" />
        </LinearLayout>

</LinearLayout>