<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/frame_btn_question_ask"
            style="@style/frame_button"
            android:text="@string/frame_title_question_ask" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/frame_button_cutline"
            android:contentDescription="@string/strDesc" />

        <Button
            android:id="@+id/frame_btn_question_share"
            style="@style/frame_button"
            android:text="@string/frame_title_question_share" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/frame_button_cutline"
            android:contentDescription="@string/strDesc" />

        <Button
            android:id="@+id/frame_btn_question_job"
            style="@style/frame_button"
            android:text="@string/frame_title_quesion_job" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/frame_button_cutline"
            android:contentDescription="@string/strDesc" />
    </LinearLayout>

</LinearLayout>